syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.message";
option java_outer_classname = "MessageDataProto";
option objc_class_prefix = "HLW";
 
package Nanomite.Core.Network.Grpc;

message NetworkUser {
	string LoginName = 13;
	string PasswordHash = 16;
	string AuthenticationToken = 17;
}